# ocaml-pb-plugin

./: LICENSE  Makefile  README.md  _tags  dune-project  myocamlbuild.ml  opam  pb-plugin.opam
misc/: README.md  hello.proto  memo_kvs.proto
pkg/: META  pkg.ml
src/: dune  pb_plugin.ml  protobuf_reified.ml
test/: dune  test.ml  test_gen.py  test_read.py
